Fixed minor mixup in R6

--- a/R6.Rmd
+++ b/R6.Rmd
@@ -34,7 +34,7 @@ R6 is very similar to a built-in OO system called __reference classes__, or RC f
   `vignette("Performance", "R6")` provides more details on the performance.
 
 * Because the ideas that underlie R6 and RC are similar, it will only require 
-  a small amount of additional effort to learn R6 if you need to.
+  a small amount of additional effort to learn RC if you need to.
 
 Because R6 is not built into base R, you'll need to install and load a package in order to use it:
 
